Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11527

Wrong label when adding a file to a project

XMLWordPrintable

    • dc62e340060c059a3e57ed18dc3c5767eaa07286

      Steps to reproduce:

      • create an Empty Qt Project
      • add a source file to this project

      Current behavior:

      • on the last page of the wizard the label asks to add this as a subproject to the current project

      Expected behavior:

      • former versions of Creator had just 'Add to project:' as label
      • 'Add as a subproject to project:' was only used for subproject templates

        For Gerrit Dashboard: QTCREATORBUG-11527
        # Subject Branch Project Status CR V

            con Eike Ziller
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes