Fix text on Project Management wizard page

Broke with a23b34988282008820bfca1afec5ad79c0d769ac

Task-number: QTCREATORBUG-11527
Change-Id: I523456ea805aa476552a9686ac620b8f204a732a
Reviewed-by: Christian Stenger <christian.stenger@digia.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>